# org-roamers

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.org  conf.json  installer.nsi  org-roam-rs.el  org-roamers.el  server_conf.json
.github/workflows/: build-and-test-docker.yml  build-deb.yml  release-deb.yml  release.yml  test.yml  ubuntu-test.yml  windows-build.yml
doc/: rebuilding-db.org
org-roamers/: Cargo.toml
org-roamers-cli/: Cargo.toml
org-roamers-cli/src/: conf.rs  entry.rs  main.rs
org-roamers-cli/src/cli/: mod.rs
org-roamers-cli/src/server/: args.rs  cli.rs  conf.rs  mod.rs
org-roamers-gui/: Cargo.toml  build.rs
org-roamers-gui/src/: logger.rs  main.rs  settings.rs  start.rs
org-roamers/src/: config.rs  diff.rs  error.rs  latex.rs  lib.rs  perf.rs  search.rs  watcher.rs  websocket.rs
org-roamers/src/api/: mod.rs  types.rs
org-roamers/src/auth/: mod.rs  password.rs  session_store.rs
org-roamers/src/cache/: file.rs  fileiter.rs  mod.rs
org-roamers/src/client/: message.rs  mod.rs
org-roamers/src/latex/: builder.rs  mod.rs
org-roamers/src/search/: default.rs  mod.rs  text_search.rs
org-roamers/src/server/: data.rs  emacs.rs  mod.rs  types.rs
org-roamers/src/server/handlers/: assets.rs  auth.rs  emacs.rs  graph.rs  health.rs  latex.rs  mod.rs  org.rs  search.rs  tags.rs  websocket.rs
org-roamers/src/server/middleware/: auth.rs
org-roamers/src/server/services/: asset_service.rs  graph_service.rs  latex_service.rs  mod.rs  org_service.rs  search_service.rs
org-roamers/src/sqlite/: files.rs  init.rs  mod.rs  olp.rs  rebuild.rs
org-roamers/src/transform/: export.rs  html.rs  keywords.rs  mod.rs  node_builder.rs  org.rs  subtree.rs  title.rs
src/: datamodel.rs  error.rs  export.rs  file.rs  latex.rs  lib.rs  logger.rs  main.rs  migrate.rs  org.rs  parser.rs  perf.rs  search.rs  server.rs  sqlite.rs  subtree.rs  watcher.rs
src/api/: mod.rs  types.rs
src/database/: datamodel.rs  embeddings.rs  mod.rs  search.rs  store.rs
src/server/: data.rs  emacs.rs  mod.rs
src/sqlite/: init.rs  mod.rs  olp.rs  rebuild.rs
src/transform/: export.rs  mod.rs  org.rs  subtree.rs  title.rs
test-data/: advanced-emacs.org  configuring-emacs.org  emacs-overview.org  emacs-package-management.org  test-db.db
tests/: cmp_emacs_roamers_db.rs
web/: Makefile  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
web-old/: index.html
web/src/: App.vue  highlightjs.ts  history.ts  latex-utils.ts  main.ts  router.ts  settings.ts  sigma_helpers.ts  theme.ts  theme_list.ts  types.ts
web/src/assets/: main.css
web/src/components/: ErrorDialog.vue  Graph.vue  GraphView.vue  LinksSection.vue  LoginForm.vue  Preview.vue  PreviewFrame.vue  ProviderGroup.vue  Search.vue  SearchBar.vue  SearchSuggestion.vue
web/src/components/Settings/: FilterConstraint.vue  SettingsFilter.vue  SettingsGeneral.vue  SettingsPane.vue  SettingsTheme.vue  ThemeEntry.vue
web/src/components/basic/: BigButton.vue  DropDown.vue  StyledButton.vue
web/src/composables/: useAuth.ts  usePreviewContent.ts  usePreviewResize.ts
web/src/styles/: preview-code.css  preview-content.css  preview-frame.css  preview-latex.css  preview-responsive.css
web/src/utils/: highlightSetup.ts
web2/: Makefile  index.html  package-lock.json  package.json  vite.config.js
web2/src/: main.js  style.css
web2/src/assets/: main.css
web2/src/components/: Graph.vue  Preview.vue  Search.vue
