[package]
name = "org-roamers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
arroy = "0.5.0"
heed = "0.21.0"
heed-types = "0.21.0"
orgize = "0.10.0-alpha.10"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rouille = "3.6.2"
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tantivy = "0.22.0"
tempfile = "3.14.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
