[package]
name = "org-roamers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
notify = "8.0.0"
orgize = "0.10.0-alpha.10"
rouille = "3.6.2"
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.14.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
