[package]
name = "org-roamers-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
org-roamers = { path = "../org-roamers/" }
anyhow = "1.0.98"
rusqlite = { version = "0.33.0", features = ["backup"] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = []
static_assets = ["org-roamers/static_assets"]
