[package]
name = "org-roamers-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
org-roamers = { path = "../org-roamers/" }
egui = "0.31.1"
eframe = "0.31.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
serde = "1.0.219"
serde_json = "1.0.140"
rfd = "0.15.3"

[features]
default = []
static_assets = ["org-roamers/static_assets"]
