[package]
name = "org-roamers-gui"
version = "0.1.0"
license = "GPLv3"
authors = [ "Dominik Keller" ]
description = "Gui for org-roam db"
edition = "2024"

[dependencies]
org-roamers = { path = "../org-roamers/" }
egui = "0.31.1"
eframe = "0.31.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
serde = "1.0.219"
serde_json = "1.0.140"
rfd = "0.15.3"
image = "0.25.6"
winit = "0.30.11"

[features]
default = []
static_assets = ["org-roamers/static_assets"]

[package.metadata.deb]
maintainer = "Dominik Keller <github@dominik-keller.com>"
depends = [ ]
assets = [
    [ "target/release/org-roamers-gui", "usr/local/bin/", "755" ],
    [ "target/release/org-roamers-cli", "usr/local/bin/", "755" ],
    [ "target/org-roamers-gui.desktop", "usr/local/share/applications/", "755" ],
    [ "../web/public/org-roamers-gui.png", "usr/share/icons/hicolor/256x256/apps/", "755" ],
]
features = [ "static_assets" ]
section = "Web Software"
