[package]
name = "org-roamers"
version = "0.1.0"
edition = "2021"

[features]
default = [ ]
static_assets = [ "include_dir" ]

[dependencies]
anyhow = "1.0.96"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
notify = "8.0.0"
orgize = "0.10.0-alpha.10"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rusqlite = { version = "0.33.0", features = ["backup", "bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.14.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dependencies.include_dir]
version = "0.7.4"
optional = true

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
